Mobile: fix language visibility and nav spacing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -745,12 +745,16 @@ button[type="submit"]:hover {
     justify-content: flex-end;
     text-align: right;
     order: 1;
-    margin-top: 72px;
+    margin-top: 48px;
     padding-right: 2px;
   }
 
   .lang-select {
-    padding-right: 2px;
+    padding-right: 6px;
+  }
+
+  .lang-toggle {
+    white-space: nowrap;
   }
 
   .hero-mini {
